Fix layout bugs for sidebar and overall

--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,7 @@ figcaption {
 :root {
   --maxWidthforTexts: 65ch;
   --light-weight: 300;
+  --sidebar-font-color: rgb(245, 245, 245);
 }
 
 html {
@@ -84,6 +85,7 @@ html {
 /* generic things */
 body {
   background-color: aliceblue;
+  display: flex;
 }
 
 .horizontal-vertical-centering {
@@ -167,37 +169,36 @@ body {
 
 /* Sidebar */
 
-.sidebar-container {
-  max-width: 20rem; /* sidebar width */
-  font-weight: bold;
-  position: relative;
+#menu-icon-span {
+  cursor: pointer;
+  transition: transform 0.5s ease-out;
 }
 
-#menu-icon-span {
-  position: absolute;
-  top: 0.2rem;
-  right: -2rem;
-  width: 1.8rem;
-  height: 1.8rem;
-  cursor: pointer;
-  border-radius: 1px;
-  transition: transform 0.5s ease-out;
+.menu-icon {
+  border-radius: 3px;
+  padding: 0.2rem;
+  top: 0;
+  position: sticky;
+  width: max-content;
+}
+
+.menu-icon:hover {
+  background-color: rgba(194, 194, 194, 0.4);
 }
 
 .rotate-y-axis {
   transform: rotateY(180deg);
 }
 
-#menu-icon-span:hover {
-  background-color: rgba(194, 194, 194, 0.4);
+.sidebar-container {
+  font-weight: bold;
+  flex-basis: 20rem;
 }
 
 .sidebar {
-  max-width: inherit;
-  width: 100%;
+  background-color: #1E1E1E;
   height: 100vh;
-  background-color: rgb(194, 194, 194);
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   padding: 0.5rem 1rem;
@@ -205,8 +206,8 @@ body {
 }
 
 .sidebar-item {
+  color: var(--sidebar-font-color);
   text-decoration: none;
-  color: black;
   cursor: pointer;
   display: flex;
   column-gap: 1rem;
@@ -216,5 +217,9 @@ body {
 }
 
 .sidebar-item:hover {
-  background-color: rgb(155, 155, 155);
+  background-color: rgb(245, 245, 245, 0.1);
+}
+
+main {
+  padding: 0.2rem 3rem;
 }
